--- a/lightbox-template.html
+++ b/lightbox-template.html
@@ -1,12 +1,12 @@
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css" />
 <div class="lightbox-content">
-    <!-- Close button -->
-    <span class="close">&times;</span>
 
     <!-- Project title -->
-    <p class="lightbox-header">
+    <h2 class="lightbox-header">
         <span id="lightbox-title">Default Title</span>
-    </p>
+        <span class="close">&times;</span>
+        <!-- Close button moved inside the header -->
+    </h2>
 
     <!-- Slideshow container -->
     <div class="slideshow-container">
@@ -15,12 +15,12 @@
 
         <!-- Navigation arrows -->
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onclick="changeSlide(1)">&#10095;</a>
+        <a class="next" onclick="changeSlide(44)">&#10095;</a>
     </div>
-    
+
     <!-- Image description -->
     <p id="image-description">Default image description</p>
-    
+
     <!-- Thumbnail navigation (will be hidden if only one image) -->
     <div id="thumbnail-navigation" class="row"></div>
 
