More Projects and Functionality
Projects can have no images, the project timeline is implemented, and the first P5.JS project is loaded and works!

--- a/lightbox-template.html
+++ b/lightbox-template.html
@@ -4,6 +4,7 @@
     <!-- Project title -->
     <h2 class="lightbox-header">
         <span id="lightbox-title">Default Title</span>
+        <span id="lightbox-timeframe" class="timeframe">Timeframe Placeholder</span>
         <span class="close">&times;</span>
         <!-- Close button moved inside the header -->
     </h2>
@@ -15,7 +16,7 @@
 
         <!-- Navigation arrows -->
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onclick="changeSlide(44)">&#10095;</a>
+        <a class="next" onclick="changeSlide(1)">&#10095;</a>
     </div>
 
     <!-- Image description -->
