--- a/lightbox-template.html
+++ b/lightbox-template.html
@@ -24,6 +24,11 @@
 
     <!-- Thumbnail navigation (will be hidden if only one image) -->
     <div id="thumbnail-navigation" class="row"></div>
+    
+    <!-- Collaborators section -->
+    <div id="collaborators-section" style="display: none;">
+        <p id="collaborators-text"></p>
+    </div>
 
     <!-- Project description -->
     <p id="project-description">Default HTML content</p>
