Overlays and Transitions
The home page has a colorful gray background and the Portfolio page has a wipe transition!

Additionally, some backend tags were added to the markdown editor

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap"
             rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     </head>
 
     <body>
+        <div id="background-overlay"></div>
+        <div id="fade-overlay"></div>
+
         <!-- Header -->
         <header>
             <h1>KEVIN THIES</h1>
@@ -26,7 +32,7 @@
             <!-- Home Section (default) -->
             <div id="home" class="section" style="display: block">
                 <h2>Welcome to the Home Page</h2>
-                <p>This is the content of the home page.</p>
+                <p>Ideally you never see this.</p>
             </div>
 
             <!-- About Section -->
