Home Page Formatting
Home page has actual text and a first pass at formatting!

--- a/index.html
+++ b/index.html
@@ -31,8 +31,41 @@
         <div id="body">
             <!-- Home Section (default) -->
             <div id="home" class="section" style="display: block">
-                <h2>Welcome to the Home Page</h2>
-                <p>Ideally you never see this.</p>
+                <div id="home-content">
+                    <h2>I'm Kevin Thies<br />A maker who believes in community-driven learning</h2>
+                    <q>Everyone should have the opportunity to make.</q><br /><br />
+                    <i
+                        >I believe access to tools, resources, and guidance should never be a barrier to creativity.
+                        Whether it's learning to use a 3D printer or mastering the art of laser cutting, everyone
+                        deserves the opportunity to explore and create.</i
+                    >
+                    <br><br>
+                    <hr class="hr-home">
+                    <b>My Story</b>
+                    <p>
+                        My journey into making began not in a traditional classroom, but in a workshop where I felt more
+                        at home. As a student in architecture school, I realized early on that the conventional academic
+                        path wasn’t my calling. However, I found value in the skills I was learning, especially those
+                        related to craftsmanship. More importantly, I discovered the true power of hands-on learning in
+                        an interdisciplinary makerspace, where people from all backgrounds and fields came together to
+                        explore and create. It was there that I recognized how transformative access to a creative space
+                        could be for anyone.<br /><br />
+
+                        In my teaching experience, I’ve had the privilege of guiding individuals through their first
+                        experiences with technology, from laser cutting to sewing and coding. Yet, the phrase I heard
+                        most often from these newcomers was always the same: "I wish I had found this earlier." This
+                        moment always reminded me of the untapped potential waiting to be unlocked in every person. I
+                        made it my mission to ensure that no one would have to wait to experience the joy and
+                        empowerment that comes with making.<br /><br />
+
+                        Through teaching, improving makerspaces, and connecting with others in the field, I’ve come to
+                        understand that creating a supportive, accessible environment for creativity is just as
+                        important as providing the right tools. Everyone should have access to the resources they need
+                        to create—and I want to be part of making that happen.
+                    </p>
+                    <hr class="hr-home">
+                    <p class="scrollToView">Scroll down to view my Portfolio</p>
+                </div>
             </div>
 
             <!-- About Section -->
