--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -39,8 +40,8 @@
                         Whether it's learning to use a 3D printer or mastering the art of laser cutting, everyone
                         deserves the opportunity to explore and create.</i
                     >
-                    <br><br>
-                    <hr class="hr-home">
+                    <br /><br />
+                    <hr class="hr-home" />
                     <b>My Story</b>
                     <p>
                         My journey into making began not in a traditional classroom, but in a workshop where I felt more
@@ -63,15 +64,90 @@
                         important as providing the right tools. Everyone should have access to the resources they need
                         to create—and I want to be part of making that happen.
                     </p>
-                    <hr class="hr-home">
+                    <hr class="hr-home" />
                     <p class="scrollToView">Scroll down to view my Portfolio</p>
                 </div>
             </div>
 
             <!-- About Section -->
             <div id="about" class="section" style="display: none">
-                <h2>About Me</h2>
-                <p>This is the about page content.</p>
+                <div class="about-container">
+                    <!-- Left Column: Image, Resume, Social Media Links -->
+                    <div class="about-left">
+                        <img src="images/me.jpg" alt="Your Photo" class="about-photo" />
+                        <div class="social-links">
+                            <a href="https://github.com/KBTHIES?tab=repositories" target="_blank" class="social-icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://dondougo.itch.io/" target="_blank" class="social-icon">
+                                <i class="fab fa-itch-io"></i>
+                            </a>
+                            <a
+                                href="https://www.linkedin.com/in/kevin-thies-04241417a/"
+                                target="_blank"
+                                class="social-icon">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                        </div>
+                        <!-- Add resume link -->
+                        <a
+                            href="https://drive.google.com/file/d/1hKfB3M7pkZgtnJ3em3ZwtFKiiIT0BCYf/view"
+                            target="_blank"
+                            class="resume-link">
+                            <i class="fas fa-file-pdf"></i> View my Resume
+                        </a>
+                        <br />
+                        <b>Contact me</b>
+                        <p>(336) 514 5773<br />kbthies@gmail.com</p>
+                    </div>
+
+                    <!-- Right Column: Text Content -->
+                    <div class="about-right">
+                        <h2>About Me</h2>
+                        <p>
+                            Hi there! I’m Kevin Thies — a maker, teacher, gamer, and storyteller who loves turning
+                            creative sparks into tangible creations. Whether it’s building props for LARP, designing
+                            magical girl TTRPGs, or crafting custom resin dice, I’m always chasing the joy of creating
+                            and sharing that joy with others.
+                        </p>
+
+                        <p>
+                            When I’m not in a makerspace wielding my trusty heat gun or running a laser cutter, you’ll probably
+                            find me at a digital tabletop surrounded by dice, maps, and friends. I’m a passionate TTRPG
+                            enthusiast currently in three campaigns (yes, three!), exploring systems like Pathfinder 2e,
+                            CAIN, and Lancer. On top of that, I’m the founder and head designer of Mahou Showdown, where
+                            I release original games inspired by my favorite anime, Puella Magi Madoka Magica. Making
+                            one Magical Girl TTRPG a year has become a tradition, and if you’re curious, you can check
+                            them out on my Itch.io page on the left!
+                        </p>
+
+                        <p>
+                            Speaking of storytelling, I also love live-action roleplaying (LARP). It’s like combining
+                            theater and improvisation with the thrill of adventure — dressing up, running through the
+                            woods, and clashing foam swords with friends. My background in film and theater acting makes
+                            it a natural fit, and I’ve even run cosplay workshops (ironically, as someone who doesn’t
+                            cosplay much).
+                        </p>
+
+                        <p>
+                            Making has always been at the core of what I do. During college, every gift I gave was
+                            handmade — there’s something special about creating something personal for someone else.
+                            Digital fabrication tools like laser cutters are my go-to for quick iteration and
+                            high-quality results.
+                        </p>
+
+                        <p>
+                            And because I can’t resist a fun challenge, I once ventured into streaming. Inspired by the
+                            rise of VTubers, I took to the digital stage to learn about video editing, marketing, and
+                            online creativity. Those lessons continue to shape how I present my projects and ideas.
+                        </p>
+
+                        <p>
+                            Through it all, my goal is simple: to explore, create, and inspire others to do the same. If
+                            any of this sounds like your kind of thing, feel free to reach out or explore my portfolio!
+                        </p>
+                    </div>
+                </div>
             </div>
             <!-- About Section -->
 
