--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- Header -->
         <header>
-            <h1>KEVIN THIES</h1>
+            <h1>Kevin Thies</h1>
             <nav>
                 <button id="home-btn">Home</button>
                 <button id="portfolio-btn">Portfolio</button>
@@ -116,7 +116,7 @@
                             find me at a digital tabletop surrounded by dice, maps, and friends. I’m a passionate TTRPG
                             enthusiast currently in three campaigns (yes, three!), exploring systems like Pathfinder 2e,
                             CAIN, and Lancer. On top of that, I’m the founder and head designer of Mahou Showdown, where
-                            I release original games inspired by my favorite anime, Puella Magi Madoka Magica. Making
+                            I release original games inspired by my favorite anime, <i>Puella Magi Madoka Magica</i>. Making
                             one Magical Girl TTRPG a year has become a tradition, and if you’re curious, you can check
                             them out on my Itch.io page on the left!
                         </p>
