More About Me Content
Populates bullet points from a different json file!

--- a/index.html
+++ b/index.html
@@ -105,20 +105,21 @@
                     <div class="about-right">
                         <h2>About Me</h2>
                         <p>
-                            Hi there! I’m Kevin Thies — a maker, teacher, gamer, and storyteller who loves turning
-                            creative sparks into tangible creations. Whether it’s building props for LARP, designing
-                            magical girl TTRPGs, or crafting custom resin dice, I’m always chasing the joy of creating
-                            and sharing that joy with others.
+                            Hi there! I’m Kevin Thies — a maker, teacher, and storyteller who loves turning creative
+                            sparks into tangible creations. Whether it’s building props for LARP, designing magical girl
+                            TTRPGs, or crafting custom resin dice, I’m always chasing the joy of creating and sharing
+                            that joy with others.
                         </p>
 
                         <p>
-                            When I’m not in a makerspace wielding my trusty heat gun or running a laser cutter, you’ll probably
-                            find me at a digital tabletop surrounded by dice, maps, and friends. I’m a passionate TTRPG
-                            enthusiast currently in three campaigns (yes, three!), exploring systems like Pathfinder 2e,
-                            CAIN, and Lancer. On top of that, I’m the founder and head designer of Mahou Showdown, where
-                            I release original games inspired by my favorite anime, <i>Puella Magi Madoka Magica</i>. Making
-                            one Magical Girl TTRPG a year has become a tradition, and if you’re curious, you can check
-                            them out on my Itch.io page on the left!
+                            When I’m not in a makerspace wielding my trusty heat gun or running a laser cutter (my two
+                            favorite tools), you’ll probably find me at a digital tabletop surrounded by dice, maps, and
+                            friends. I’m a passionate TTRPG enthusiast currently in three campaigns (yes, three!),
+                            exploring systems like Pathfinder 2e, CAIN, and Lancer. On top of that, I’m the founder and
+                            head designer of Mahou Showdown, where I release original games inspired by my favorite
+                            anime, <i>Puella Magi Madoka Magica</i>. Making one Magical Girl TTRPG a year has become a
+                            tradition of mine, and if you’re curious, you can check them out on my Itch.io page on the
+                            left!
                         </p>
 
                         <p>
@@ -137,16 +138,15 @@
                         </p>
 
                         <p>
-                            And because I can’t resist a fun challenge, I once ventured into streaming. Inspired by the
-                            rise of VTubers, I took to the digital stage to learn about video editing, marketing, and
-                            online creativity. Those lessons continue to shape how I present my projects and ideas.
-                        </p>
-
-                        <p>
-                            Through it all, my goal is simple: to explore, create, and inspire others to do the same. If
-                            any of this sounds like your kind of thing, feel free to reach out or explore my portfolio!
+                            Through it all, my goal is simple: to create and have fun, and hopefully inspire others to
+                            do the same. If any of this sounds like your kind of thing, feel free to reach out or
+                            explore my portfolio!
                         </p>
                     </div>
+                </div>
+                <!-- New Section: Dynamic Categories -->
+                <div class="dynamic-sections-container">
+                    <div id="about-sections"></div>
                 </div>
             </div>
             <!-- About Section -->
