--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <title>Kevin Thies</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
@@ -44,25 +45,26 @@
                     <hr class="hr-home" />
                     <b>My Story</b>
                     <p>
-                        My journey into making began not in a traditional classroom, but in a workshop where I felt more
-                        at home. As a student in architecture school, I realized early on that the conventional academic
-                        path wasn’t my calling. However, I found value in the skills I was learning, especially those
-                        related to craftsmanship. More importantly, I discovered the true power of hands-on learning in
-                        an interdisciplinary makerspace, where people from all backgrounds and fields came together to
-                        explore and create. It was there that I recognized how transformative access to a creative space
-                        could be for anyone.<br /><br />
+                        My journey into making began not in a traditional classroom, but in woodshops and makerspaces
+                        where I felt more at home. As a student in architecture school, I realized early on that the
+                        conventional path to licensure and an architecture firm wasn’t my calling. However, I found
+                        value in the skills I was learning, especially those related to craftsmanship. More importantly,
+                        I discovered the true power of hands-on learning in an interdisciplinary makerspace, where
+                        people from all backgrounds and fields came together to explore and create. It was there that I
+                        recognized how transformative access to a creative space could be for anyone.<br /><br />
 
                         In my teaching experience, I’ve had the privilege of guiding individuals through their first
-                        experiences with technology, from laser cutting to sewing and coding. Yet, the phrase I heard
-                        most often from these newcomers was always the same: "I wish I had found this earlier." This
-                        moment always reminded me of the untapped potential waiting to be unlocked in every person. I
-                        made it my mission to ensure that no one would have to wait to experience the joy and
-                        empowerment that comes with making.<br /><br />
+                        experiences with crafting since they were children, guiding them through not just high tech
+                        processes like laser cutting but getting hands on sewing and soldering. Yet, the phrase I often
+                        heard from these newcomers was always the same: "<i>I wish I had found this earlier.</i>" Those
+                        moments always reminded me of the untapped potential waiting to be unlocked in every person. I
+                        made it my mission to ensure that no one would fall between the cracks waiting to experience the
+                        joy and empowerment that comes with making.<br /><br />
 
                         Through teaching, improving makerspaces, and connecting with others in the field, I’ve come to
-                        understand that creating a supportive, accessible environment for creativity is just as
-                        important as providing the right tools. Everyone should have access to the resources they need
-                        to create—and I want to be part of making that happen.
+                        understand that creating a supportive, accessible environment for creativity is just as, if not
+                        more important than, providing the right tools. Everyone should have access to the resources they
+                        need to create—and I want to be part of making that happen.
                     </p>
                     <hr class="hr-home" />
                     <p class="scrollToView">Scroll down to view my Portfolio</p>
